# AgentsTeam

./: .gitignore  Dockerfile  LICENSE  README.md  analyze_tetris.py  docker-compose.yml  package-lock.json  requirements.txt  setup.py
cli/: __init__.py  main.py  requirements.txt  shell.py
cli/clients/: __init__.py  ollama_client.py  openai_client.py
cli/core/: code_generator.py  error_corrector.py  model_selector.py  project_analyzer.py  try_error_orchestrator.py
cli/utils/: config.py  logger.py
projects/chats/: MEDIUM_ARTICLE.md  MEDIUM_ARTICLE_EXPANDED.md
projects/chats/ollama-web-chat/: .gitignore  README.md  package.json  requirements.txt
projects/chats/ollama-web-chat/src/: database.py  main.py  models.py  ollama_api.py  websocket.py
projects/demo-time-cli/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
projects/demo-time-cli/src/tiny_cli_datetime/: __init__.py  cli.py  main.py  main.py.backup  utils.py
projects/demo-time-cli/tests/: test_cli.py  test_main.py
projects/game-of-life-opencv/: README.md  main.py  main.py.backup
projects/snake-game/: README.md  config.py  generate_snake_game.py  main.py  setup.py  snake_game.py  utils.py
projects/system-monitor/: README.md  generate_fixed_project.py  generate_project.py  main.py  requirements.txt  run.py  system_monitor.py
projects/system-monitor/static/: app.js  style.css
projects/system-monitor/templates/: index.html
projects/test-hello/: README.md  main.py  requirements.txt
projects/tetris-game/: README.md  constants.py  game.py  main.py  test_broken.py  tetromino.py  utils.py
projects/yolo-detector/: README.md  README_SETUP.md  requirements.txt  run.py  simple_detector.py  test_setup.py
projects/yolo-detector/src/: __init__.py
(+16 files in other folders)
