[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tinycli"
version = "0.1.0"
description = "A tiny Python CLI that prints the current date/time and exits."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/tinycli"
repository = "https://github.com/yourusername/tinycli"
keywords = ["cli", "datetime", "tiny"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
tinycli = "src.tinycli:main"

[tool.poetry.urls]
Documentation = "https://github.com/yourusername/tinycli#readme"
Issues = "https://github.com/yourusername/tinycli/issues"